--- a/partials/home.html
+++ b/partials/home.html
@@ -44,8 +44,7 @@
 
         <div class="row">
             <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-check-circle"></i> Bootstrap 3 Built</h3>
-                <p>The 'Modern Business' website template by <a href="http://startbootstrap.com">Start Bootstrap</a> is built with <a href="http://getbootstrap.com">Bootstrap 3</a>. Make sure you're up to date with latest Bootstrap documentation!</p>
+                <button ng-click="signin()">Sign in</button>
             </div>
             <div class="col-lg-4 col-md-4">
                 <h3><i class="fa fa-pencil"></i> Ready to Style &amp; Edit</h3>
